--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ticketing System</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <h1>Ticketing System</h1>
@@ -34,7 +30,7 @@
       </form>
     </div>
 
-    <!-- Tickets List (for both customer & staff) -->
+    <!-- Tickets List -->
     <h2>Your Tickets</h2>
     <div id="tickets"></div>
   </div>
